Got React Working

--- a/src/options/index.html
+++ b/src/options/index.html
@@ -1,31 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <link href="./options.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans|ZCOOL+XiaoWei" rel="stylesheet">
-    <title>Go Local Config</title>
+    <meta charset="utf-8" />
+    <title>Money Tree</title>
   </head>
   <body>
-    <div class="main_window">
-      <div class="add_new_form">
-        <div class='form_input'>
-          <div class='form_name'>Name:</div>
-          <input id='name' type='text' class='text_input'>
-        </div>
-        <div class='form_input'>
-          <div class='form_name'>Url:</div>
-          <input id='url' type='text' class='text_input'>
-        </div>
-        <div class='form_input'>
-          <div class='form_name'>Port:</div>
-          <input id='port' type='text' class='text_input'>
-        </div>
-        <button class='std_button' id='save_form'>Save</button>
-      </div>
-
-      <div id='all'></div>
-      <div id='messages'><div>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
