--- a/src/options/index.html
+++ b/src/options/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Money Tree</title>
+    <title>Go Local Options</title>
   </head>
   <body>
     <div id="root"></div>
